fixed vine clipping into text

--- a/src/styles/icons.css
+++ b/src/styles/icons.css
@@ -26,7 +26,7 @@
 }
 
 .vine-icon {
-  width: 24px;
+  width: 21px;
 }
 
 .html-web-icon {
@@ -48,9 +48,5 @@
 
   #flower-variant-two {
     width: 90px;
-  }
-
-  .vine-icon {
-    width: 21px;
   }
 }
